--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,11 @@
 <resources>
     <string name="app_name">Playlist Maker</string>
+    <string name="title_hello">Привет, Практикум</string>
+    <string name="title_settings" translatable="false">Настройки</string>
+    <string name="title_media" translatable="false">Медиатека</string>
+    <string name="title_search" translatable="false">Поиск</string>
+    <string name="black_theame" translatable="false">Темная тема</string>
+    <string name="share_app" translatable="false">Поделиться приложением</string>
+    <string name="write_support" translatable="false">Написать в поддержку</string>
+    <string name="agree_licence" translatable="false">Пользовательское соглашение</string>
 </resources>
