--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,21 +1,21 @@
 <resources>
     <string name="app_name">Playlist Maker</string>
     <string name="title_hello">Привет, Практикум</string>
-    <string name="title_settings" translatable="false">Настройки</string>
-    <string name="title_media" translatable="false">Медиатека</string>
-    <string name="title_search" translatable="false">Поиск</string>
-    <string name="black_theame" translatable="false">Темная тема</string>
-    <string name="share_app" translatable="false">Поделиться приложением</string>
-    <string name="write_support" translatable="false">Написать в поддержку</string>
-    <string name="agree_licence" translatable="false">Пользовательское соглашение</string>
-    <string name="share_message" translatable="false">Рекомендую курс по Android-разработке в Практикуме: https://practicum.yandex.ru/android/</string>
+    <string name="title_settings">Настройки</string>
+    <string name="title_media">Медиатека</string>
+    <string name="title_search">Поиск</string>
+    <string name="black_theame">Темная тема</string>
+    <string name="share_app">Поделиться приложением</string>
+    <string name="write_support">Написать в поддержку</string>
+    <string name="agree_licence">Пользовательское соглашение</string>
+    <string name="share_message">Рекомендую курс по Android-разработке в Практикуме: https://practicum.yandex.ru/android/</string>
     <string name="support_email" translatable="false">your_email@example.com</string>
-    <string name="support_subject" translatable="false">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
-    <string name="support_body" translatable="false">Спасибо разработчикам и разработчицам за крутое приложение!</string>
+    <string name="support_subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
+    <string name="support_body">Спасибо разработчикам и разработчицам за крутое приложение!</string>
     <string name="licence_url" translatable="false">https://practicum.yandex.ru/legal/offer/</string>
 
-    <string name="search_title" translatable="false">Поиск</string>
-    <string name="search_hint" translatable="false">Поиск</string>
-    <string name="content_desc_back" translatable="false">Назад</string>
-    <string name="content_desc_clear" translatable="false">Очистить запрос</string>
+    <string name="search_title">Поиск</string>
+    <string name="search_hint">Поиск</string>
+    <string name="content_desc_back">Назад</string>
+    <string name="content_desc_clear">Очистить запрос</string>
 </resources>
