task is done v8

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,4 +25,10 @@
 
     <string name="history_title" translatable="false">Вы искали</string>
     <string name="clear_history" translatable="false">Очистить историю</string>
+
+    <string name="country" translatable="false">Страна</string>
+    <string name="genre" translatable="false">Жанр</string>
+    <string name="year" translatable="false">Год</string>
+    <string name="album" translatable="false">Альбом</string>
+    <string name="length" translatable="false">Длительность</string>
 </resources>
