--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,4 +33,10 @@
     <string name="length" translatable="false">Длительность</string>
 
     <string name="time" translatable="false">0:00</string>
+
+    <string name="tab_playlists">Плейлисты</string>
+    <string name="tab_favorites">Избранные треки</string>
+    <string name="new_playlist">Новый плейлист</string>
+    <string name="playlists_placeholder">Вы не создали ни одного плейлиста</string>
+    <string name="favorites_placeholder">Ваша медиатека пуста</string>
 </resources>
